Rewrite stock dashboard with stats options news

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Info</title>
+    <title>Sample Stock Dashboard</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Stock Dashboard</h1>
-    <div id="ticker-container"></div>
-
+    <div id="tickers"></div>
     <script src="script.js"></script>
 </body>
 </html>
